--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,26 @@
-<sqd-designer
-  theme="dark"
-  [undoStackSize]="10"
-  [definition]="definition"
-  [toolboxConfiguration]="toolboxConfiguration"
-  [stepsConfiguration]="stepsConfiguration"
-  [validatorConfiguration]="validatorConfiguration"
-  [controlBar]="true"
-  [selectedStepId]="selectedStepId"
-  [isReadonly]="isReadonly"
-  [isToolboxCollapsed]="isToolboxCollapsed"
-  [isEditorCollapsed]="isEditorCollapsed"
-  [areEditorsHidden]="false"
-  [rootEditor]="rootEditor"
-  [stepEditor]="stepEditor"
-  (onReady)="onDesignerReady($event)"
-  (onDefinitionChanged)="onDefinitionChanged($event)"
+<span class="flex flex-row">
+  <sqd-designer theme="light"  [undoStackSize]="10" [definition]="definition" [toolboxConfiguration]="toolboxConfiguration"
+  [stepsConfiguration]="stepsConfiguration" [validatorConfiguration]="validatorConfiguration" [controlBar]="true"
+  [selectedStepId]="selectedStepId" [isReadonly]="isReadonly" [isToolboxCollapsed]="isToolboxCollapsed" 
+  [isEditorCollapsed]="isEditorCollapsed" [areEditorsHidden]="false" [rootEditor]="rootEditor" [stepEditor]="stepEditor"
+  (onReady)="onDesignerReady($event)" (onDefinitionChanged)="onDefinitionChanged($event)"
   (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
   (onIsToolboxCollapsedChanged)="onIsToolboxCollapsedChanged($event)"
-  (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)"
->
+  (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)">
 </sqd-designer>
 
+<span class="w-30rem">
+  <div>Hello</div>
+</span>
+
+</span>
+
 <ng-template #rootEditor let-editor>
-  <h2>Root Editor</h2>
+  <!-- <h2>Root Editor</h2>
 
   <h3>Test Data</h3>
   <mat-form-field class="full-width">
-    <input
-      matInput
-      type="number"
-      [value]="editor.definition.properties.testData"
-      [readonly]="editor.isReadonly"
+    <input matInput type="number" [value]="editor.definition.properties.testData" [readonly]="editor.isReadonly"
       (input)="
         updateProperty(
           editor.definition.properties,
@@ -38,34 +28,68 @@
           $event,
           editor.context
         )
-      "
-    />
-  </mat-form-field>
+      " />
+  </mat-form-field> -->
 </ng-template>
 
 <ng-template #stepEditor let-editor>
-  <div *ngIf="toggle">
-    <h2>Mail Editor</h2>
+  <div>
 
+    <p-dialog header="Set Configuration" [modal]="false" [(visible)]="visible" [style]="{ width: '50rem' }"
+      [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
+
+
+        <span class="p-float-label flex gap-2 flex-column">
+          <label>Mail From</label>
+          <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailFrom" [readonly]="editor.isReadonly"
+            (input)="
+        updateProperty(
+          editor.step.properties,
+          'mailFrom',
+          $event,
+          editor.context
+        )
+      " />
+         
+        </span>
+
+        <span class="flex flex-column gap-2 mt-3">
+          <label for="date">Scheduled date</label>
+          <input appendTo="body" pInputText type="date" class="w-20rem" [value]="editor.step.properties.scheduledTime"  (input)="
+          updateProperty(
+            editor.step.properties,
+            'scheduledTime',
+            $event,
+            editor.context
+          )
+        " />
+        </span>
+
+        <span class="flex flex-column gap-2 mt-2">
+          <label for="">Template</label>
+          <select class="w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
+          updateProperty(
+            editor.step.properties,
+            'emailTemplate',
+            $event,
+            editor.context
+          )
+        ">
+            <option value="1">First Follow up</option>
+            <option value="2">Second Follow up</option>
+          </select>
+
+        </span>
+    </p-dialog>
+
+    <h2>Mail Editor</h2>
+    <!-- 
     <mat-tab-group>
       <mat-tab label="Details">
         <h3>Mail</h3>
         <h5>To Mail</h5>
         <mat-form-field class="full-width">
-          <input
-            matInput
-            type="text"
-            [value]="editor.step.properties.toMail"
-            [readonly]="editor.isReadonly"
-            (input)="
-              updateProperty(
-                editor.step.properties,
-                'toMail',
-                $event,
-                editor.context
-              )
-            "
-          />
+         
         </mat-form-field>
         <h5>Scheduled Time</h5>
         <mat-form-field class="full-width">
@@ -85,19 +109,15 @@
           />
         </mat-form-field>
       </mat-tab>
-    </mat-tab-group>
+    </mat-tab-group> -->
   </div>
-  <div *ngIf="!toggle">
+  <!-- <div>
     <h2>Job Editor</h2>
     <mat-tab-group>
       <mat-tab label="Details">
         <h3>Job</h3>
         <mat-form-field class="full-width">
-          <input
-            matInput
-            type="number"
-            [value]="editor.step.properties.testData"
-            [readonly]="editor.isReadonly"
+          <input matInput type="number" [value]="editor.step.properties.testData" [readonly]="editor.isReadonly"
             (input)="
               updateProperty(
                 editor.step.properties,
@@ -105,15 +125,14 @@
                 $event,
                 editor.context
               )
-            "
-          />
+            " />
         </mat-form-field>
       </mat-tab>
     </mat-tab-group>
-  </div>
+  </div> -->
 </ng-template>
 
-<div class="block">
+<!-- <div class="block">
   <button mat-raised-button color="primary" (click)="reloadDefinitionClicked()">
     Reload definition
   </button>
@@ -122,11 +141,7 @@
     {{ isReadonly ? "Enable editing" : "Disable editing" }}
   </button>
   &nbsp;
-  <button
-    mat-raised-button
-    color="primary"
-    (click)="toggleSelectedStepClicked()"
-  >
+  <button mat-raised-button color="primary" (click)="toggleSelectedStepClicked()">
     {{ selectedStepId ? "Unselect" : "Select first" }}
   </button>
   &nbsp;
@@ -138,7 +153,7 @@
     {{ isEditorCollapsed ? "Show editor" : "Hide editor" }}
   </button>
   &nbsp; Is valid: <strong>{{ isValid }}</strong>
-</div>
+</div> -->
 
 <div class="block">
   <mat-form-field class="full-width flex-1s">
@@ -148,13 +163,8 @@
   </mat-form-field>
 </div>
 
-<div class="block">
-  This demo uses Angular, Material UI and
-  <a
-    href="https://github.com/nocode-js/sequential-workflow-designer/tree/main/angular/designer"
-    target="_blank"
-    >Sequential Workflow Designer for Angular</a
-  >.
-</div>
+
+
+
 
 <button (click)="toggleSelectedStepClicked1()">Toggle Selected Step</button>
