--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '/node_modules/primeflex/primeflex.css';
+
 body,
 input,
 textarea,
@@ -28,7 +30,7 @@ textarea {
 }
 
 .sqd-designer-angular {
-	width: 100vw;
+	width: 60vw;
 	height: 80vh;
 }
 .sqd-editor {
