--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,89 @@
 <span class="flex flex-row">
-  <sqd-designer theme="light"  [undoStackSize]="10" [definition]="definition" [toolboxConfiguration]="toolboxConfiguration"
-  [stepsConfiguration]="stepsConfiguration" [validatorConfiguration]="validatorConfiguration" [controlBar]="true"
-  [selectedStepId]="selectedStepId" [isReadonly]="isReadonly" [isToolboxCollapsed]="isToolboxCollapsed" 
-  [isEditorCollapsed]="isEditorCollapsed" [areEditorsHidden]="false" [rootEditor]="rootEditor" [stepEditor]="stepEditor"
-  (onReady)="onDesignerReady($event)" (onDefinitionChanged)="onDefinitionChanged($event)"
-  (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
-  (onIsToolboxCollapsedChanged)="onIsToolboxCollapsedChanged($event)"
-  (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)">
-</sqd-designer>
+  <sqd-designer theme="light" [undoStackSize]="10" [definition]="definition"
+    [toolboxConfiguration]="toolboxConfiguration" [stepsConfiguration]="stepsConfiguration"
+    [controlBar]="true" [selectedStepId]="selectedStepId"
+    [isReadonly]="isReadonly" [isToolboxCollapsed]="isToolboxCollapsed" [isEditorCollapsed]="isEditorCollapsed"
+    [areEditorsHidden]="false" [rootEditor]="rootEditor" [stepEditor]="stepEditor" (onReady)="onDesignerReady($event)"
+    (onDefinitionChanged)="onDefinitionChanged($event)" (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
+    (onIsToolboxCollapsedChanged)="onIsToolboxCollapsedChanged($event)"
+    (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)">
+  </sqd-designer>
 
-<span class="w-30rem">
-  <div>Hello</div>
+  <span class="w-full">
+    <div class=" flow_chart w-full">
+      <div class="card h-full w-full p-3 shadow-1">
+        <div>
+          <div class="flex flex-row justify-content-between align-items-center gap-5">
+            <h5 class="m-0 font-semibold w-full text-gray-700">Auto Follow Up From Cadence</h5>
+          </div>
+        </div>
+        <hr>
+        <p-timeline [value]="definition.sequence" styleClass="customized-timeline mt-8">
+          <ng-template pTemplate="marker" let-event>
+            <span class="custom-marker shadow-2" [style.backgroundColor]="'#7EC607'">
+            </span>
+          </ng-template>
+          <ng-template pTemplate="content" let-event>
+            <div class="flex-container flex flex-row align-items-start ">
+              <div (mouseover)="op.show($event, targetEl)" class="card cursor-pointer mb-0 p-4 flex flex-row gap-3"
+                [ngClass]="'demo_green'">
+                <i class="fa-solid text-2xl" [ngClass]="{'fa-envelope-open': event.type === 'Mail', 'fa-phone-volume' : event.type === 'Call' }"></i>
+                <!-- <i [ngClass]="event.icon1"></i>
+                <i [ngClass]="event.icon2"></i> -->
+                
+              </div>
+              <div class="flex flex-column">
+                <p-card class=" p-0" [header]="event.properties['scheduledTime']" [subheader]="event.properties['time']"></p-card>
+                <span style="margin-left: 4em;" #targetEl></span>
+              </div>
+            </div>
+            <p class="event-description"></p>
+  
+          </ng-template>
+        </p-timeline>
+      </div>
+  
+    </div>
+    <p-overlayPanel #op [showCloseIcon]="true" [dismissable]="false">
+      <p-table [value]="data" [tableStyle]="{ 'min-width': '30rem' }">
+          <ng-template pTemplate="header">
+              <tr>
+                  <th>Scheduled Date</th>
+                  <th>Event Date</th>
+                  <th>Event</th>
+              </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-product>
+              <tr class="">
+                  <td>
+                      <div class="flex flex-row align-items-center gap-4">
+                          <span>{{ product.scheduledDate }}</span>
+                          <span>{{ product.scheduledTime }}</span>
+                      </div>
+                  </td>
+                  <td>
+                      <div class="flex flex-row align-items-center gap-4">
+                          <span>{{ product.eventDate }}</span>
+                          <span>{{ product.eventTime }}</span>
+                      </div>
+                  </td>
+                  <td>
+                      <div class="flex flex-row align-items-center gap-2"><span (click)="showFullMail()"
+                              class="cursor-pointer">{{ product.event }}</span><span
+                              class="text-2xl {{ product.isSuccess ? 'pi pi-check-square text-green-500':'pi pi-exclamation-triangle text-red-400'}}"></span>
+                      </div>
+                  </td>
+              </tr>
+          </ng-template>
+      </p-table>
+  </p-overlayPanel>
+  </span>
+
+ 
 </span>
 
-</span>
+
+
 
 <ng-template #rootEditor let-editor>
   <!-- <h2>Root Editor</h2>
@@ -39,10 +109,10 @@
       [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
 
 
-        <span class="p-float-label flex gap-2 flex-column">
-          <label>Mail From</label>
-          <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailFrom" [readonly]="editor.isReadonly"
-            (input)="
+      <span class="p-float-label flex gap-2 flex-column">
+        <label>Mail From</label>
+        <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailFrom"
+          [readonly]="editor.isReadonly" (input)="
         updateProperty(
           editor.step.properties,
           'mailFrom',
@@ -50,12 +120,13 @@
           editor.context
         )
       " />
-         
-        </span>
 
-        <span class="flex flex-column gap-2 mt-3">
-          <label for="date">Scheduled date</label>
-          <input appendTo="body" pInputText type="date" class="w-20rem" [value]="editor.step.properties.scheduledTime"  (input)="
+      </span>
+
+      <span class="flex flex-column gap-2 mt-3">
+        <label for="date">Scheduled date</label>
+        <input appendTo="body" pInputText type="date" class="w-20rem" [value]="editor.step.properties.scheduledTime"
+          (input)="
           updateProperty(
             editor.step.properties,
             'scheduledTime',
@@ -63,11 +134,11 @@
             editor.context
           )
         " />
-        </span>
+      </span>
 
-        <span class="flex flex-column gap-2 mt-2">
-          <label for="">Template</label>
-          <select class="w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
+      <span class="flex flex-column gap-2 mt-2">
+        <label for="">Template</label>
+        <select class="w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
           updateProperty(
             editor.step.properties,
             'emailTemplate',
@@ -75,14 +146,14 @@
             editor.context
           )
         ">
-            <option value="1">First Follow up</option>
-            <option value="2">Second Follow up</option>
-          </select>
+          <option value="1">First Follow up</option>
+          <option value="2">Second Follow up</option>
+        </select>
 
-        </span>
+      </span>
     </p-dialog>
 
-    <h2>Mail Editor</h2>
+
     <!-- 
     <mat-tab-group>
       <mat-tab label="Details">
