--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,90 +1,125 @@
 <span class="flex flex-row">
-  <sqd-designer theme="light" [undoStackSize]="10" [definition]="definition"
-    [toolboxConfiguration]="toolboxConfiguration" [stepsConfiguration]="stepsConfiguration"
-    [controlBar]="true" [selectedStepId]="selectedStepId"
-    [isReadonly]="isReadonly" [isToolboxCollapsed]="isToolboxCollapsed" [isEditorCollapsed]="isEditorCollapsed"
-    [areEditorsHidden]="false" [rootEditor]="rootEditor" [stepEditor]="stepEditor" (onReady)="onDesignerReady($event)"
-    (onDefinitionChanged)="onDefinitionChanged($event)" (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
+  <sqd-designer
+    theme="light"
+    [undoStackSize]="10"
+    [definition]="definition"
+    [toolboxConfiguration]="toolboxConfiguration"
+    [stepsConfiguration]="stepsConfiguration"
+    [controlBar]="true"
+    [selectedStepId]="selectedStepId"
+    [isReadonly]="isReadonly"
+    [isToolboxCollapsed]="isToolboxCollapsed"
+    [isEditorCollapsed]="isEditorCollapsed"
+    [areEditorsHidden]="false"
+    [rootEditor]="rootEditor"
+    [stepEditor]="stepEditor"
+    (onReady)="onDesignerReady($event)"
+    (onDefinitionChanged)="onDefinitionChanged($event)"
+    (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
     (onIsToolboxCollapsedChanged)="onIsToolboxCollapsedChanged($event)"
-    (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)">
+    (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)"
+    [keyboard]="false"
+  >
   </sqd-designer>
 
   <span class="w-full">
-    <div class=" flow_chart w-full">
+    <div class="flow_chart w-full">
       <div class="card h-full w-full p-3 shadow-1">
         <div>
-          <div class="flex flex-row justify-content-between align-items-center gap-5">
-            <h5 class="m-0 font-semibold w-full text-gray-700">Auto Follow Up From Cadence</h5>
+          <div
+            class="flex flex-row justify-content-between align-items-center gap-5"
+          >
+            <h5 class="m-0 font-semibold w-full text-gray-700">
+              Auto Follow Up From Cadence
+            </h5>
           </div>
         </div>
-        <hr>
-        <p-timeline [value]="definition.sequence" styleClass="customized-timeline mt-8">
+        <hr />
+        <p-timeline
+          [value]="definition.sequence"
+          styleClass="customized-timeline mt-8"
+        >
           <ng-template pTemplate="marker" let-event>
-            <span class="custom-marker shadow-2" [style.backgroundColor]="'#7EC607'">
+            <span
+              class="custom-marker shadow-2"
+              [style.backgroundColor]="'#7EC607'"
+            >
             </span>
           </ng-template>
           <ng-template pTemplate="content" let-event>
-            <div class="flex-container flex flex-row align-items-start ">
-              <div (mouseover)="op.show($event, targetEl)" class="card cursor-pointer mb-0 p-4 flex flex-row gap-3"
-                [ngClass]="'demo_green'">
-                <i class="fa-solid text-2xl" [ngClass]="{'fa-envelope-open': event.type === 'Mail', 'fa-phone-volume' : event.type === 'Call' }"></i>
+            <div class="flex-container flex flex-row align-items-start">
+              <div
+                (mouseover)="op.show($event, targetEl)"
+                class="card cursor-pointer mb-0 p-4 flex flex-row gap-3"
+                [ngClass]="'demo_green'"
+              >
+                <i
+                  class="fa-solid text-2xl"
+                  [ngClass]="{
+                    'fa-envelope-open': event.type === 'Mail',
+                    'fa-phone-volume': event.type === 'Call'
+                  }"
+                ></i>
                 <!-- <i [ngClass]="event.icon1"></i>
                 <i [ngClass]="event.icon2"></i> -->
-                
               </div>
               <div class="flex flex-column">
-                <p-card class=" p-0" [header]="event.properties['scheduledTime']" [subheader]="event.properties['time']"></p-card>
-                <span style="margin-left: 4em;" #targetEl></span>
+                <p-card
+                  class="p-0"
+                  [header]="event.properties['scheduledTime']"
+                  [subheader]="event.properties['time']"
+                ></p-card>
+                <span style="margin-left: 4em" #targetEl></span>
               </div>
             </div>
             <p class="event-description"></p>
-  
           </ng-template>
         </p-timeline>
       </div>
-  
     </div>
     <p-overlayPanel #op [showCloseIcon]="true" [dismissable]="false">
       <p-table [value]="data" [tableStyle]="{ 'min-width': '30rem' }">
-          <ng-template pTemplate="header">
-              <tr>
-                  <th>Scheduled Date</th>
-                  <th>Event Date</th>
-                  <th>Event</th>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-product>
-              <tr class="">
-                  <td>
-                      <div class="flex flex-row align-items-center gap-4">
-                          <span>{{ product.scheduledDate }}</span>
-                          <span>{{ product.scheduledTime }}</span>
-                      </div>
-                  </td>
-                  <td>
-                      <div class="flex flex-row align-items-center gap-4">
-                          <span>{{ product.eventDate }}</span>
-                          <span>{{ product.eventTime }}</span>
-                      </div>
-                  </td>
-                  <td>
-                      <div class="flex flex-row align-items-center gap-2"><span (click)="showFullMail()"
-                              class="cursor-pointer">{{ product.event }}</span><span
-                              class="text-2xl {{ product.isSuccess ? 'pi pi-check-square text-green-500':'pi pi-exclamation-triangle text-red-400'}}"></span>
-                      </div>
-                  </td>
-              </tr>
-          </ng-template>
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Scheduled Date</th>
+            <th>Event Date</th>
+            <th>Event</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-product>
+          <tr class="">
+            <td>
+              <div class="flex flex-row align-items-center gap-4">
+                <span>{{ product.scheduledDate }}</span>
+                <span>{{ product.scheduledTime }}</span>
+              </div>
+            </td>
+            <td>
+              <div class="flex flex-row align-items-center gap-4">
+                <span>{{ product.eventDate }}</span>
+                <span>{{ product.eventTime }}</span>
+              </div>
+            </td>
+            <td>
+              <div class="flex flex-row align-items-center gap-2">
+                <span (click)="showFullMail()" class="cursor-pointer">{{
+                  product.event
+                }}</span
+                ><span
+                  class="text-2xl {{
+                    product.isSuccess
+                      ? 'pi pi-check-square text-green-500'
+                      : 'pi pi-exclamation-triangle text-red-400'
+                  }}"
+                ></span>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
       </p-table>
-  </p-overlayPanel>
+    </p-overlayPanel>
   </span>
-
- 
 </span>
-
-
-
-
 <ng-template #rootEditor let-editor>
   <!-- <h2>Root Editor</h2>
 
@@ -104,55 +139,117 @@
 
 <ng-template #stepEditor let-editor>
   <div>
-
-    <p-dialog header="Set Configuration" [modal]="false" [(visible)]="visible" [style]="{ width: '50rem' }"
-      [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
-
-
+    <p-dialog
+      header="Set Configuration"
+      [modal]="false"
+      [(visible)]="visible"
+      [style]="{ width: '50rem' }"
+      [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+      [maximizable]="true"
+      (onHide)="toggleSelectedStepClicked()"
+    >
       <span class="p-float-label flex gap-2 flex-column">
         <label>Mail From</label>
-        <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailFrom"
-          [readonly]="editor.isReadonly" (input)="
-        updateProperty(
-          editor.step.properties,
-          'mailFrom',
-          $event,
-          editor.context
-        )
-      " />
-
+        <input
+          pInputText
+          type="text"
+          class="p-inputtext-sm w-20rem"
+          [value]="editor.step.properties.mailFrom"
+          [readonly]="editor.isReadonly"
+          (input)="
+            updateProperty(
+              editor.step.properties,
+              'mailFrom',
+              $event,
+              editor.context
+            )
+          "
+        />
       </span>
 
       <span class="flex flex-column gap-2 mt-3">
         <label for="date">Scheduled date</label>
-        <input appendTo="body" pInputText type="date" class="w-20rem" [value]="editor.step.properties.scheduledTime"
+        <input
+          appendTo="body"
+          pInputText
+          type="date"
+          class="w-20rem"
+          [value]="editor.step.properties.scheduledTime"
           (input)="
-          updateProperty(
-            editor.step.properties,
-            'scheduledTime',
-            $event,
-            editor.context
-          )
-        " />
+            updateProperty(
+              editor.step.properties,
+              'scheduledTime',
+              $event,
+              editor.context
+            )
+          "
+        />
       </span>
 
       <span class="flex flex-column gap-2 mt-2">
         <label for="">Template</label>
-        <select class="w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
-          updateProperty(
-            editor.step.properties,
-            'emailTemplate',
-            $event,
-            editor.context
-          )
-        ">
+        <select
+          class="w-20rem"
+          pInputText
+          optionLabel="name"
+          [value]="editor.step.properties.emailTemplate"
+          (input)="
+            updateProperty(
+              editor.step.properties,
+              'emailTemplate',
+              $event,
+              editor.context
+            )
+          "
+        >
           <option value="1">First Follow up</option>
           <option value="2">Second Follow up</option>
         </select>
-
       </span>
-    </p-dialog>
 
+      <span class="flex flex-column gap-2 mt-2">
+        <div class="mb-3 form-check">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="check1"
+            [checked]="toggle"
+            (change)="toggleCheckbox($event)"
+          />
+          <label class="form-check-label" for="check1">IsCustomTemplate</label>
+        </div>
+      </span>
+
+      <div class="container" [hidden]="!toggle">
+        <div
+          class="text-black p-3"
+          draggable="true"
+          (dragstart)="onDragStart($event, '#Customer_Name#')"
+        >
+          #Customer_Name#
+        </div>
+        <div
+          class="text-black p-3"
+          draggable="true"
+          (dragstart)="onDragStart($event, '#Invoice_Number#')"
+        >
+          #Invoice_Number#
+        </div>
+        <div
+          class="text-black p-3"
+          draggable="true"
+          (dragstart)="onDragStart($event, '#Balance_Amount#')"
+        >
+          #Balance_Amount#
+        </div>
+        <h4>Custom Template Editor</h4>
+        <angular-editor
+          [config]="config"
+          (focus)="onEditorFocus($event)"
+          (blur)="onEditorBlur($event)"
+        ></angular-editor>
+      </div>
+    </p-dialog>
 
     <!-- 
     <mat-tab-group>
@@ -233,9 +330,3 @@
     }}</textarea>
   </mat-form-field>
 </div>
-
-
-
-
-
-<button (click)="toggleSelectedStepClicked1()">Toggle Selected Step</button>
