--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
             class="flex flex-row justify-content-between align-items-center gap-5"
           >
             <h5 class="m-0 font-semibold w-full text-gray-700">
-              Auto Follow Up From Cadence
+              Auto Follow Up From Cadence Configuration
             </h5>
           </div>
         </div>
