--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,8 @@
     <div class="flow_chart w-full">
       <div class="card h-full w-full p-3 shadow-1">
         <div>
-          <div
-            class="flex flex-row justify-content-between align-items-center gap-5"
-          >
-            <h5 class="m-0 font-semibold w-full text-gray-700">
-              Auto Follow Up From Cadence Configuration
-            </h5>
+          <div class="flex flex-row justify-content-start align-items-center">
+            <h5 class="m-0 font-semibold w-full text-gray-700">Auto Follow Up From Cadence</h5>
           </div>
         </div>
         <hr />
@@ -78,44 +74,30 @@
       </div>
     </div>
     <p-overlayPanel #op [showCloseIcon]="true" [dismissable]="false">
-      <p-table [value]="data" [tableStyle]="{ 'min-width': '30rem' }">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Scheduled Date</th>
-            <th>Event Date</th>
-            <th>Event</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-product>
-          <tr class="">
-            <td>
-              <div class="flex flex-row align-items-center gap-4">
-                <span>{{ product.scheduledDate }}</span>
-                <span>{{ product.scheduledTime }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex flex-row align-items-center gap-4">
-                <span>{{ product.eventDate }}</span>
-                <span>{{ product.eventTime }}</span>
-              </div>
-            </td>
-            <td>
-              <div class="flex flex-row align-items-center gap-2">
-                <span (click)="showFullMail()" class="cursor-pointer">{{
-                  product.event
-                }}</span
-                ><span
-                  class="text-2xl {{
-                    product.isSuccess
-                      ? 'pi pi-check-square text-green-500'
-                      : 'pi pi-exclamation-triangle text-red-400'
-                  }}"
-                ></span>
-              </div>
-            </td>
-          </tr>
-        </ng-template>
+      <p-table [value]="data" [tableStyle]="{ 'min-width': '25rem' }">
+          <ng-template pTemplate="header">
+              <tr>
+                  <th>Scheduled Date</th>
+                  <th>Event</th>
+              </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-product>
+              <tr class="">
+                  <td>
+                      <div class="flex flex-row align-items-center gap-4">
+                          <span>{{ product.scheduledDate }}</span>
+                          <span>{{ product.scheduledTime }}</span>
+                      </div>
+                  </td>
+                 
+                  <td>
+                      <div class="flex flex-row align-items-center gap-2"><span (click)="showFullMail()"
+                              class="cursor-pointer">{{ product.event }}</span><span
+                              class="text-2xl {{ product.isSuccess ? 'pi pi-check-square text-green-500':'pi pi-exclamation-triangle text-red-400'}}"></span>
+                      </div>
+                  </td>
+              </tr>
+          </ng-template>
       </p-table>
     </p-overlayPanel>
   </span>
@@ -169,12 +151,7 @@
 
       <span class="flex flex-column gap-2 mt-3">
         <label for="date">Scheduled date</label>
-        <input
-          appendTo="body"
-          pInputText
-          type="date"
-          class="w-20rem"
-          [value]="editor.step.properties.scheduledTime"
+        <input appendTo="body" pInputText type="date" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.scheduledTime"
           (input)="
             updateProperty(
               editor.step.properties,
@@ -188,20 +165,14 @@
 
       <span class="flex flex-column gap-2 mt-2">
         <label for="">Template</label>
-        <select
-          class="w-20rem"
-          pInputText
-          optionLabel="name"
-          [value]="editor.step.properties.emailTemplate"
-          (input)="
-            updateProperty(
-              editor.step.properties,
-              'emailTemplate',
-              $event,
-              editor.context
-            )
-          "
-        >
+        <select class="p-inputtext-sm w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
+          updateProperty(
+            editor.step.properties,
+            'emailTemplate',
+            $event,
+            editor.context
+          )
+        ">
           <option value="1">First Follow up</option>
           <option value="2">Second Follow up</option>
         </select>
