--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,16 @@
 <span class="flex flex-row">
-  <sqd-designer
-    theme="light"
-    [undoStackSize]="10"
-    [definition]="definition"
-    [toolboxConfiguration]="toolboxConfiguration"
-    [stepsConfiguration]="stepsConfiguration"
-    [validatorConfiguration]="validatorConfiguration"
-    [controlBar]="true"
-    [selectedStepId]="selectedStepId"
-    [isReadonly]="isReadonly"
-    [isToolboxCollapsed]="isToolboxCollapsed"
-    [isEditorCollapsed]="isEditorCollapsed"
-    [areEditorsHidden]="false"
-    [rootEditor]="rootEditor"
-    [stepEditor]="stepEditor"
-    (onReady)="onDesignerReady($event)"
-    (onDefinitionChanged)="onDefinitionChanged($event)"
-    (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
+  <sqd-designer theme="light" [undoStackSize]="10" [definition]="definition"
+    [toolboxConfiguration]="toolboxConfiguration" [stepsConfiguration]="stepsConfiguration"
+    [validatorConfiguration]="validatorConfiguration" [controlBar]="true" [selectedStepId]="selectedStepId"
+    [isReadonly]="isReadonly" [isToolboxCollapsed]="isToolboxCollapsed" [isEditorCollapsed]="isEditorCollapsed"
+    [areEditorsHidden]="false" [rootEditor]="rootEditor" [stepEditor]="stepEditor" (onReady)="onDesignerReady($event)"
+    (onDefinitionChanged)="onDefinitionChanged($event)" (onSelectedStepIdChanged)="onSelectedStepIdChanged($event)"
     (onIsToolboxCollapsedChanged)="onIsToolboxCollapsedChanged($event)"
-    (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)"
-    [keyboard]="false"
-  >
+    (onIsEditorCollapsedChanged)="onIsEditorCollapsedChanged($event)" [keyboard]="false">
   </sqd-designer>
 
-<ng-template #rootEditor let-editor>
-  <!-- <h2>Root Editor</h2>
+  <ng-template #rootEditor let-editor>
+    <!-- <h2>Root Editor</h2>
 
 
   <h3>Test Data</h3>
@@ -39,8 +25,8 @@
         )
       " />
   </mat-form-field> -->
- 
-  <!-- <h3>Test Data</h3>
+
+    <!-- <h3>Test Data</h3>
   <mat-form-field class="full-width">
     <input matInput type="number" [value]="editor.definition.properties.testData" [readonly]="editor.isReadonly"
       (input)="
@@ -52,79 +38,72 @@
         )
       " />
   </mat-form-field> -->
-</ng-template>
+  </ng-template>
 
-<ng-template #stepEditor let-editor>
-    <p-dialog
-      header="Set Configuration"
-      [modal]="true"
-      [(visible)]="visible"
-      [style]="{ width: '50rem' }"
-      [draggable]="false"
-      (onHide)="toggleSelectedStepClicked()"
-      (onShow)="reflectChanges()"
-     
-    >
-    <span>
+  <ng-template #stepEditor let-editor>
+    <p-dialog header="Set Configuration" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }"
+      [draggable]="false" (onHide)="toggleSelectedStepClicked()" (onShow)="reflectChanges()">
+      <!-- <span>
       <ng-scroll-picker [data]="data" (change)="change($event)"></ng-scroll-picker>
     <span>{{selectedValue}}</span>
-    </span>
+    </span> -->
+      <span class="p-float-label flex gap-2 flex-column">
+        <label>Step Name</label>
+        <input id="stepName" pInputText type="text" class="p-inputtext-sm w-20rem" [(ngModel)]="selectedStep.name"
+          (blur)="
+            updateStepName(
+              editor,
+              'name',
+              $event,
+              editor.context,
+              true
+            );
+          " />
+      </span>
       <span class="p-float-label flex gap-2 flex-column">
         <label>Email From</label>
-        <input
-          pInputText
-          type="text"
-          class="p-inputtext-sm w-20rem"
-          [value]="editor.step.properties.mailFrom"
-          [readonly]="editor.isReadonly"
-          (input)="
+        <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailFrom"
+          [readonly]="editor.isReadonly" (input)="
             updateProperty(
               editor.step.properties,
               'mailFrom',
               $event,
               editor.context
             )
-          "
-        />
+          " />
       </span>
       <span class="p-float-label flex gap-2 flex-column">
         <label>Email To</label>
-        <input
-          pInputText
-          type="text"
-          class="p-inputtext-sm w-20rem"
-          [value]="editor.step.properties.mailTo"
-          [readonly]="editor.isReadonly"
-          (input)="
+        <input pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.mailTo"
+          [readonly]="editor.isReadonly" (input)="
             updateProperty(
               editor.step.properties,
               'mailTo',
               $event,
               editor.context
             )
-          "
-        />
+          " />
       </span>
 
       <span class="flex flex-column gap-2 mt-3">
         <label for="date">Email trigger schedule</label>
-        <input appendTo="body" pInputText type="text" class="p-inputtext-sm w-20rem" [value]="editor.step.properties.scheduledTime"
-          (input)="
+        <input appendTo="body" pInputText type="text" class="p-inputtext-sm w-20rem"
+          [value]="editor.step.properties.scheduledTime" (input)="
             updateProperty(
               editor.step.properties,
               'scheduledTime',
               $event,
               editor.context
             )
-          "
-        />
+          " />
       </span>
 
-     
+
 
       <div class=" gap-2 mt-2" [ngClass]="toggle ? 'hidden ':'flex flex-column'">
         <label for="">Template</label>
-        <select class="p-inputtext-sm w-20rem" pInputText optionLabel="name" [value]="editor.step.properties.emailTemplate" (input)="
+        <select class="p-inputtext-sm w-20rem" pInputText optionLabel="name"
+          [value]="editor.step.properties.emailTemplate" (input)="
           updateProperty(
             editor.step.properties,
             'emailTemplate',
@@ -139,45 +118,25 @@
 
       <span class="flex flex-column gap-2 mt-2">
         <div class="mb-3 form-check">
-          <input
-            type="checkbox"
-            class="form-check-input"
-            id="check1"
-            [checked]="toggle"
-            (change)="toggleCheckbox($event)"
-          />
+          <input type="checkbox" class="form-check-input" id="check1" [checked]="toggle"
+            (change)="toggleCheckbox($event)" />
           <label class="form-check-label" for="check1">IsCustomTemplate</label>
         </div>
       </span>
 
       <div class="container" [hidden]="!toggle">
-        <div
-          class="text-black p-3"
-          draggable="true"
-          (dragstart)="onDragStart($event, '#Customer_Name#')"
-        >
+        <div class="text-black p-3" draggable="true" (dragstart)="onDragStart($event, '#Customer_Name#')">
           #Customer_Name#
         </div>
-        <div
-          class="text-black p-3"
-          draggable="true"
-          (dragstart)="onDragStart($event, '#Invoice_Number#')"
-        >
+        <div class="text-black p-3" draggable="true" (dragstart)="onDragStart($event, '#Invoice_Number#')">
           #Invoice_Number#
         </div>
-        <div
-          class="text-black p-3"
-          draggable="true"
-          (dragstart)="onDragStart($event, '#Balance_Amount#')"
-        >
+        <div class="text-black p-3" draggable="true" (dragstart)="onDragStart($event, '#Balance_Amount#')">
           #Balance_Amount#
         </div>
         <h4>Custom Template Editor</h4>
-        <angular-editor
-          [config]="config"
-          (focus)="onEditorFocus($event)"
-          (blur)="onEditorBlur($event)"
-        ></angular-editor>
+        <angular-editor [config]="config" (focus)="onEditorFocus($event)"
+          (blur)="onEditorBlur($event)"></angular-editor>
       </div>
     </p-dialog>
 
@@ -208,7 +167,7 @@
         </mat-form-field>
       </mat-tab>
     </mat-tab-group> -->
-  <!-- <div>
+    <!-- <div>
     <h2>Job Editor</h2>
     <mat-tab-group>
       <mat-tab label="Details">
@@ -227,9 +186,9 @@
       </mat-tab>
     </mat-tab-group>
   </div> -->
-</ng-template>
+  </ng-template>
 
-<!-- <div class="block">
+  <!-- <div class="block">
   <button mat-raised-button color="primary" (click)="reloadDefinitionClicked()">
     Reload definition
   </button>
@@ -265,6 +224,3 @@
    
   </span>
 </p-dialog> -->
-
-
-
